// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button Component Snapshots > Button renders default 1`] = `
<div>
  <button
    style="padding: 8px 12px; border-radius: 8px; background: var(--nv-bg-1); color: var(--nv-text-0); border: 1px solid var(--nv-border); font-family: Inter, system-ui, sans-serif; font-size: 14px; cursor: pointer; transition: background 0.15s ease;"
  >
    Click Me
  </button>
</div>
`;

exports[`Button Component Snapshots > Button renders disabled state 1`] = `
<div>
  <button
    disabled=""
    style="padding: 8px 12px; border-radius: 8px; background: var(--nv-bg-1); color: var(--nv-text-0); border: 1px solid var(--nv-border); font-family: Inter, system-ui, sans-serif; font-size: 14px; cursor: pointer; transition: background 0.15s ease;"
  >
    Disabled
  </button>
</div>
`;

exports[`Button Component Snapshots > Button renders loading state 1`] = `
<div>
  <button
    style="padding: 8px 12px; border-radius: 8px; background: var(--nv-bg-1); color: var(--nv-text-0); border: 1px solid var(--nv-border); font-family: Inter, system-ui, sans-serif; font-size: 14px; cursor: pointer; transition: background 0.15s ease;"
  >
    Loading
  </button>
</div>
`;

exports[`Button Component Snapshots > Button renders primary variant 1`] = `
<div>
  <button
    style="padding: 8px 12px; border-radius: 8px; background: var(--nv-bg-1); color: var(--nv-text-0); border: 1px solid var(--nv-border); font-family: Inter, system-ui, sans-serif; font-size: 14px; cursor: pointer; transition: background 0.15s ease;"
  >
    Primary
  </button>
</div>
`;

exports[`Button Component Snapshots > Button renders secondary variant 1`] = `
<div>
  <button
    style="padding: 8px 12px; border-radius: 8px; background: var(--nv-bg-1); color: var(--nv-text-0); border: 1px solid var(--nv-border); font-family: Inter, system-ui, sans-serif; font-size: 14px; cursor: pointer; transition: background 0.15s ease;"
  >
    Secondary
  </button>
</div>
`;
